fixing header and footer so no overlap on smaller windows

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,14 +1,14 @@
 footer {
     font-family: "Roboto-300";
-    position: absolute;
-    bottom: 0;
+    /* position: absolute; */
+    /* bottom: 0; */
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: var(--slate-600);
     height: max-content;
-    margin-top: 30px;
+    margin-top: 16px;
     padding: 8px 0px;
     /* Absolute Positioning makes box-shadow not show */
     /* box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
