--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -2,7 +2,11 @@ header {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    height: 20vh;
+    /* height: 20vh; */
+    /* max-height: max-content; */
+    padding-top: 16px;
+    padding-bottom: 16px;
+    margin-bottom: 16px;
     background-color: var(--slate-600);
     width: 100%;
     position: sticky;
