--- a/src/styles/imageSlider.css
+++ b/src/styles/imageSlider.css
@@ -4,10 +4,8 @@
     align-items: center;
     margin-top: 16px;
     padding-top: 16px;
-    margin-bottom: 30px;
-    padding-bottom: 16px;
+    margin-bottom: 16px;
     width: min-content;
-    /* border: 1px solid black; */
     background-color: var(--slate-300);
     border-radius: 4px;
 }
@@ -17,10 +15,9 @@
     justify-content: center;
     align-items: center;
     gap: 8px;
-    /* border: 1px solid black; */
     border-radius: 4px;
     padding: 8px;
-    background-color: var(--slate-400);
+    /* background-color: var(--slate-400); */
 }
 
 div.imageNavigator > div {
