--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,9 +2,10 @@ body {
     margin: 0;
     padding: 0;
     font-family: "Roboto-400";
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
 
 }
